--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "spark_flow"
+name = "sparkFlow"
 version = "0.1.0"
 description = "Default template for PDM package"
 authors = [
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.2.2",
     "pyarrow>=17.0.0",
     "fastparquet>=2024.5.0",
+	'pyspark==3.5.1'
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
